jdy-production/v7basesvc/ingress/ingress-v7-qianliyan.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: traefik
    ingress.kubernetes.io/custom-response-headers: Env:BaseSvc-Qianliyan
  name: ingress-v7-qianliyan
  namespace: ns-basesvc
spec:
  tls:
  - hosts:
    - tf.jdy.com
    secretName: tls-secret
  rules:
  - host: tf.jdy.com
    http:
      paths:
      - path: /qianliyan
        backend:
          serviceName: v7-qianliyan
          servicePort: 80
