jdy-production/v7basesvc/ingress/ingress-v7-sentinel-dashboard.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: traefik
    ingress.kubernetes.io/custom-response-headers: Env:BaseSvc-Sentinel-Dashboard
  name: ingress-v7-sentinel-dashboard
  namespace: ns-basesvc
spec:
  tls:
  - hosts:
    - sentinel-tf.jdy.com
    secretName: tls-secret
  rules:
  - host: sentinel-tf.jdy.com
    http:
      paths:
      - path: /
        backend:
          serviceName: sentinel-dashboard
          servicePort: 8888
